# vampire-dl

./: Cargo.toml  README.md
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: controller.rs  database.rs  downloader.rs  lib.rs  main.rs  models.rs  network.rs  queue.rs  retry.rs  storage.rs
platform/android/: Cargo.toml
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/vampiresquad/vampiredl/: MainActivity.kt
platform/android/src/: lib.rs
platform/desktop/: Cargo.toml  tauri.conf.json
platform/desktop/src/: main.rs
ui/: index.html  main.js
