[package]
name = "vampire_ffi"
version = "0.1.0"
edition = "2021"
description = "JNI Bridge between Android and Vampire Core Engine"

[lib]
# Android এর জন্য cdylib (C Dynamic Library) তৈরি করতে হবে
crate-type = ["cdylib"]

[dependencies]
# আমাদের নিজস্ব কোর ইঞ্জিন
vampire-core = { path = "../../core" }
# Java এর সাথে কথা বলার জন্য jni লাইব্রেরি
jni = "0.21.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
